--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <p>Git + Github</p>
         <h2>Hello</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque recusandae eius qui unde voluptatum sit velit laborum possimus laboriosam ab voluptas amet maxime, assumenda reprehenderit id, commodi saepe expedita debitis?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque recusandae eius qui unde voluptatum sit velit laborum possimus laboriosam ab voluptas amet maxime, assumenda reprehenderit id, commodi saepe expedita debitis?</p>
         <script src="script.js"></script>
     </body>
 </html>
